# Bigdataproject

./: README.md  presentation.txt  pyproject.toml
scripts/: setup_mongodb.sh
src/: aggregate_data.py  clean_data.py  ingest_data.py  visualize_data.py
